# Inspector

./: .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  QUICK_START.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  inspector.db  inspector.db-shm  inspector.db-wal  inspector_cursor.db  main.py  nginx.conf  pyproject.toml  quick_test.py  renew_ssl.sh  start-all.sh  start.sh  test_api_integration.py  test_db_health.py  test_health_direct.py  test_improvements.py  test_startup.py  test_streaming_response.py  test_streaming_simple.py
app/: main.py
config/: env.example
doc/: PROJECT_SUMMARY.md
docs/: API_ENDPOINT_FIX.md  API_FIXES_SUMMARY.md  API_INTEGRATION_FIX.md  BILINGUAL_SUMMARY.md  CLEANUP_SUMMARY.md  DAILY_SUMMARY_STATUS.md  DASHBOARD_FIX.md  DASHBOARD_OPTIMIZATION.md  DATABASE_RESET_GUIDE.md  DEPLOYMENT_GUIDE.md  EXPORT_API_FIX.md  FINAL_REPORT.md  FRONTEND_ACTIVITIES_FIX.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_OPTIMIZATION.md  FRONTEND_README.md  GITHUB_OAUTH_PRD.md  GITHUB_OAUTH_SETUP.md  IMPLEMENTED_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  ISSUE_RESOLUTION.md  MARKDOWN_RENDERING.md  MARKDOWN_USAGE.md  MEMBER_CONFIG_DEMO.md  MEMBER_CONFIG_VIEW.md  MEMBER_POSITION_FIX.md  MONITORING_TIME_RANGE_CONFIG.md  OAUTH_EMAIL_FIX.md  OAUTH_FIX_SUMMARY.md  OAUTH_IMPLEMENTATION_COMPLETE.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_ROLLBACK_SUMMARY.md  OAUTH_STATE_FIX.md  OAUTH_USAGE_GUIDE.md  PROJECT_EVOLUTION_PLAN.md  PROJECT_IMPROVEMENTS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  (+10 more)
(+71 files in other folders)
